crates/deptree-cli/tests/snapshots/python_test__upstream_highlighted_dot.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    // Note: Highlighted nodes are shown with light blue background
    "main" [fillcolor=lightblue, style=filled];
    "pkg_a" [fillcolor=lightblue, style=filled];
    "pkg_a.module_a";
    "pkg_b";
    "pkg_b.module_b" [fillcolor=lightblue, style=filled];
    "main" -> "pkg_a";
    "main" -> "pkg_b.module_b";
    "pkg_a.module_a" -> "pkg_b";
}
