crates/deptree-cli/tests/snapshots/python_test__upstream_namespace_list_format.snap
---
source: tests/python_test.rs
expression: output
---
legacy_namespace.submodule.module
normal_pkg
normal_pkg.consumer
pep420_namespace.sub_a.module_a
pep420_namespace.sub_b.module_b
