crates/deptree-cli/tests/snapshots/python_test__upstream_nonexistent_module.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
}
