crates/deptree-cli/tests/snapshots/python_test__upstream_script_with_relative_imports.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    subgraph cluster_scripts {
        label = "scripts";
        "scripts.runner" [shape=box];
    }
    "foo.bar";
    "scripts.utils.helper" [shape=box];
    "scripts.runner" -> "foo.bar";
    "scripts.runner" -> "scripts.utils.helper";
}
