crates/deptree-cli/tests/snapshots/python_test__upstream_single_module_with_deps.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "pkg_a.module_a";
    "pkg_b.module_b";
    "pkg_a.module_a" -> "pkg_b.module_b";
}
