crates/deptree-cli/tests/snapshots/python_test__upstream_transitive_deps.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "main";
    "pkg_a";
    "pkg_b.module_b";
    "main" -> "pkg_a";
    "main" -> "pkg_b.module_b";
}
