crates/deptree-cli/tests/snapshots/python_test__upstream_transitive_deps_mermaid.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
flowchart TD
    main("main") --> pkg_a_module_a("pkg_a.module_a")
    main("main") --> pkg_b_module_b("pkg_b.module_b")
    pkg_a_module_a("pkg_a.module_a") --> pkg_b_module_b("pkg_b.module_b")
