crates/deptree-cli/tests/snapshots/python_test__venv_excluded_from_module_discovery.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "main";
    "real_pkg";
    "real_pkg.module";
    "main" -> "real_pkg.module";
}
